@@ -1,4 +1,4 @@
 # Static values
-__version__  = '0.1.5'
+__version__  = '0.2.0'
 NAME         = 'rfc-errata'
 VERSION      = [ int(i) if i.isdigit() else i for i in __version__.split('.') ]
